# pusher

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/milk/pusher/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/milk/pusher/: MainActivity.java
app/src/test/java/com/milk/pusher/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
